--- a/BansalHackathon/index.html
+++ b/BansalHackathon/index.html
@@ -72,6 +72,11 @@
                                     <li><a class="dropdown-item" href="contact.html">Contact Form</a></li>
                                 </ul>
                             </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link click-scroll" href="msging.html">Ask for Help</a>
+                            </li>
+
                         </ul>
 
                         <div class="d-none d-lg-block">
