--- a/BansalHackathon/index.html
+++ b/BansalHackathon/index.html
@@ -80,8 +80,16 @@
                         </ul>
 
                         <div class="d-none d-lg-block">
-                            <!-- User Icon & Setting Pathway -->
-                            <a href="#top" class="navbar-icon bi-person smoothscroll"></a>
+                            <div class="dropdown">
+
+                                <a class="navbar-icon bi-person smoothscroll" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
+                        
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                    <a class="dropdown-item" href="#">Profile</a>
+                                    <a class="dropdown-item" href="#">Sign In</a>
+                                    <a class="dropdown-item" href="#">Login</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
